# ComputerGraphics_Duck

./: .gitmodules  CMakeLists.txt  README.md
shaders/: bezierCurve.frag  bezierCurve.geom  bezierCurve.vert  duck.frag  duck.vert  lightBillboard.frag  lightBillboard.vert  skyBox.frag  skyBox.vert  water.frag  water.vert  waterNormals.comp  waterSimulation.comp
source/: BSplineRandomizer.cpp  BSplineRandomizer.h  bezierCurve.cpp  bezierCurve.h  duck.cpp  duck.h  duckWindow.cpp  duckWindow.h  light.cpp  light.h  main.cpp  skyBox.cpp  skyBox.h  waterGrid.cpp  waterGrid.h
